# ServiceApp

./: .gitignore  CMakeLists.txt  Client.cpp  Server.cpp  Service.cpp  Service.h
CMakeServiceApp/: CMakeLists.txt  Service.cpp  Service.h  ServiceApp.cpp  ServiceApp.h
Code/: Service.cpp  Service.h  ServiceApp.cpp  ServiceApp.h
